# GeneticRungeKutta

./: .gitignore  CMakeLists.txt  README.md
src/: genetic.cpp  genetic.h  main.cpp  vector_operations.cpp
test/: CMakeLists.txt  simpson_rule.cpp
